--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Lista Cognomi</title>
 </head>
 <body>
+    <ul id="lista"></ul>
     <script src="js/main.js"></script>
 </body>
 </html>
